# eools

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakelists.txt  LICENSE  README.md  cpp.hint
Eloos/: App.hpp  Client.cpp  Client.hpp  Eloos.sln  Eloos.vcxproj  Eloos.vcxproj.filters  GameMap.hpp  GameObject.hpp  GameStructs.hpp  Game_common.hpp  Grid.cpp  Grid.hpp  NetMessageType.h  QueueClient.cpp  QueueClient.hpp  Server.cpp  Server.hpp  Ship.cpp  Ship.hpp  ShipBuilder.cpp  main.cpp  net_client.hpp  net_conneciton.hpp  net_server.hpp  net_tsqueue.hpp
NetCommon/: NetCommon.sln  NetCommon.vcxproj  NetCommon.vcxproj.filters  eol_net.hpp  net_client.hpp  net_conneciton.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp
Tests/: test.cpp  test_Client.cpp  test_Events.cpp  test_KeyBind.cpp  test_Navigation.cpp  test_gameStructs.cpp
src/: App.hpp  Body.cpp  Body.hpp  Camera.cpp  Camera.hpp  Client.cpp  Client.hpp  GameMap.cpp  GameMap.hpp  GameObject.cpp  GameObject.hpp  GameObjectFactory.cpp  GameObjectFactory.hpp  GameStructs.cpp  GameStructs.hpp  Game_common.hpp  Grid.cpp  Grid.hpp  IdGen.cpp  IdGen.hpp  NetGameObject.cpp  NetGameObject.hpp  NetMessageType.cpp  NetMessageType.h  NetMessageType.hpp  QueueClient.cpp  QueueClient.hpp  Scene.h  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Server.cpp  Server.hpp  Ship.hpp  ShipBuilder.hpp  UniqueIDNetMessageType.cpp  main.cpp
src/Game/: CurvePipe.cpp  CurvePipe.hpp  GOInit.cpp  GOInit.hpp  Grid.cpp  Grid.hpp  InputControl.cpp  InputControl.hpp  KeyBinds.cpp  KeyBinds.hpp  Navigation.cpp  Navigation.hpp  NormalCurve.cpp  NormalCurve.hpp  ScalerCurve.cpp  ScalerCurve.hpp  Ship.cpp  Ship.hpp  ShipBuilder.hpp
src/Game/Events/: Events.cpp  Events.hpp
src/Game/Input Controllers/: ICSelectGridRectangle.cpp  ICSelectGridRectangle.hpp  ICWrapperInclude.hpp
src/Game/Input Controllers/general/: ICGridLine.cpp  ICGridLine.hpp  ICLine.cpp  ICLine.hpp  ICScreenLine.cpp  ICScreenLine.hpp  ICSelectGridRectangle.cpp  (+1 more)
src/Game/Interfaces/: IFControlls.cpp  IFControlls.hpp  IFHelm.cpp  IFHelm.hpp  IFInspector.cpp  IFInspector.hpp  IFMessageViewer.cpp  IFMessageViewer.hpp  IFMessager.cpp  IFMessager.hpp  IFOpenWindow.cpp  IFOpenWindow.hpp  IFOptions.cpp  IFOptions.hpp  InterfaceContent.cpp  InterfaceContent.hpp  InterfaceInclude.hpp
src/Game/curves/: BezierCurve.cpp  BezierCurve.hpp  ConstCurve.cpp  ConstCurve.hpp  LinearCurve.cpp  LinearCurve.hpp  StepCurve.hpp  Stepcurve.cpp
src/Game/ship/: DriveTrain.cpp  DriveTrain.hpp  Generator.cpp  Generator.hpp  Loads.cpp  Loads.hpp  PowerBank.cpp  PowerBank.hpp  PowerPack.cpp  PowerPack.hpp
src/GameObjects/: Grid.cpp  Grid.hpp  Ship.cpp  Ship.hpp
src/NetCommon/: eol_net.hpp  net_client.hpp  net_common.hpp  net_conneciton.hpp  net_message.hpp  net_server.hpp  net_tsqueue.hpp
src/Tests/: test_KeyBind.cpp
src/better-enums/: thoughts on better-enums.txt
src/factory/: Factory.hpp  compiler_test_main.cpp
src/ftxui extras/: SliderNormal.hpp  readme.txt  scroller.cpp  scroller.hpp
(+2 files in other folders)
